oAuth2 handler fix