@@ -1,15 +1,8 @@
-
 package com.store.aladdin.configs;
 
-
+import com.store.aladdin.exceptions.CustomAccessDeniedHandler;
 import com.store.aladdin.exceptions.CustomOAuth2SuccessHandler;
 import com.store.aladdin.filters.JwtAuthFilter;
-import com.store.aladdin.exceptions.CustomAccessDeniedHandler;
-
-import java.util.Arrays;
-import java.util.List;
-
-import static com.store.aladdin.routes.AuthRoutes.*;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -17,22 +10,27 @@ import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.security.web.SecurityFilterChain;
-import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+
+import java.util.Arrays;
+import java.util.List;
+
+import static com.store.aladdin.routes.AuthRoutes.*;
 
 @Configuration
 public class SecurityConfig {
 
     private final CustomAccessDeniedHandler customAccessDeniedHandler;
-//    private final CustomOAuth2SuccessHandler successHandler;
+    private final CustomOAuth2SuccessHandler successHandler;
 
-    // Inject CustomAccessDeniedHandler into the configuration
-    public SecurityConfig(CustomAccessDeniedHandler customAccessDeniedHandler) {
+    public SecurityConfig(CustomAccessDeniedHandler customAccessDeniedHandler,
+                          CustomOAuth2SuccessHandler successHandler) {
         this.customAccessDeniedHandler = customAccessDeniedHandler;
-//        this.successHandler = successHandler;
+        this.successHandler = successHandler;
     }
 
     @Bean
@@ -40,52 +38,53 @@ public class SecurityConfig {
         return new BCryptPasswordEncoder();
     }
 
-    @SuppressWarnings("removal")
     @Bean
+    @SuppressWarnings("removal")
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
- 
         http
-            .csrf(AbstractHttpConfigurer::disable)
-            .cors(cors -> cors.configurationSource(corsConfigurationSource())) 
-            .authorizeHttpRequests(auth -> auth
-                    // Open authentication endpoints
-                    .requestMatchers(AUTH_BASE + LOGIN_ROUTE).permitAll()
-                    .requestMatchers(AUTH_BASE + REGISTER_ROUTE).permitAll()
-                    .requestMatchers(AUTH_BASE + VALIDATION_ROUTE).permitAll()
+                .csrf(AbstractHttpConfigurer::disable)
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .authorizeHttpRequests(auth -> auth
+                        .requestMatchers(AUTH_BASE + LOGIN_ROUTE).permitAll()
+                        .requestMatchers(AUTH_BASE + REGISTER_ROUTE).permitAll()
+                        .requestMatchers(AUTH_BASE + VALIDATION_ROUTE).permitAll()
+                        .requestMatchers(PUBLIC_BASE + "/**").permitAll()
+                        .requestMatchers(ADMIN_BASE + "/**").hasRole("ADMIN")
+                        .requestMatchers(USER_BASE + "/**").authenticated()
+                        .anyRequest().denyAll()
+                )
+                .oauth2Login(oauth2 -> oauth2
+                        .loginPage("/oauth2/authorization/google")
+                        .successHandler(successHandler)
+                )
+                .exceptionHandling()
+                .accessDeniedHandler(customAccessDeniedHandler)
+                .and()
+                .sessionManagement(session -> session
+                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+                )
+                .addFilterBefore(new JwtAuthFilter(), UsernamePasswordAuthenticationFilter.class);
 
-                    // Public API is open
-                    .requestMatchers(PUBLIC_BASE + "/**").permitAll()
-
-                    // Admin can access everything
-                    .requestMatchers(ADMIN_BASE + "/**").hasRole("ADMIN")
-                    .requestMatchers(USER_BASE + "/**").authenticated()
-                    .anyRequest().denyAll()
-            )
-
-//            .oauth2Login(oauth2 -> oauth2
-//                        .successHandler(successHandler)
-//            )
-            .exceptionHandling()
-                .accessDeniedHandler(customAccessDeniedHandler) // Use custom handler for 403 Forbidden
-            .and()
-            .sessionManagement(session -> session
-                .sessionCreationPolicy(SessionCreationPolicy.STATELESS) // Stateless session for JWT
-            )
-            .addFilterBefore(new JwtAuthFilter(), 
-                UsernamePasswordAuthenticationFilter.class); // Add JWT filter before default filter
-    
         return http.build();
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(Arrays.asList("http://localhost:5173","http://localhost:5174, https://aladdin01.netlify.app, https://aladdin-store.netlify.app, http://localhost:3000, https://aladdin-frontend.vercel.app"));
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS")); // Allowed HTTP methods
-        configuration.setAllowedHeaders(List.of("*")); // Allow all headers
-        configuration.setAllowCredentials(true); // Allow credentials (cookies)
+        configuration.setAllowedOriginPatterns(Arrays.asList(
+                "http://localhost:5173",
+                "http://localhost:5174",
+                "https://aladdin01.netlify.app",
+                "https://aladdin-store.netlify.app",
+                "http://localhost:3000",
+                "https://aladdin-frontend.vercel.app"
+        ));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setAllowCredentials(true);
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration); // Apply to all endpoints
+        source.registerCorsConfiguration("/**", configuration);
         return source;
     }
 }
